vtr_lib = static_library(
    'vtr_obj',
    [
        'fvarLevel.cpp',
        'fvarRefinement.cpp',
        'level.cpp',
        'quadRefinement.cpp',
        'refinement.cpp',
        'sparseSelector.cpp',
        'triRefinement.cpp',
    ],
)
vtr_dep = declare_dependency(
    link_with: vtr_lib,
)
